implemented carosel with basic css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,6 @@
  */
 
  @import "bootstrap/scss/bootstrap";
+ @import 'owl.carousel/src/scss/owl.carousel';
+ @import 'owl.carousel/src/scss/owl.theme.default';
+ @import 'owl.carousel/src/scss/owl.theme.green';
