--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,3 @@
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/">tinyURLclone</a>
-  <a class="navbar-brand" href="/index">index</a>
-  <a class="navbar-brand" href="/">New</a>
+  <a class="navbar-brand" href="/">WoofMama</a>
 </nav>
