--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,16 @@
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/">WoofMama</a>
-</nav>
+<header>
+  <nav class="shadow navbar navbar-expand-lg bg-light top-nav-menu">
+    <div class="container">
+      <a class="navbar-brand" href="/"><%= image_tag "woofmama-logo-lg.webp", class: "wm-nav-logo"%></a>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link custom-navlink active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link custom-navlink" href="#">Features</a>
+          <a class="nav-item nav-link custom-navlink" href="#">Pricing</a>
+        </div>
+      </div>
+      <button class="btn btn-green mr-sm-2" type="submit">Start Now</button>
+      <button class="btn btn-blue my-2 my-sm-0" type="submit">Log In</button>
+    </div>
+  </nav>
+</header>
