added main picture and responsive styling/nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
  @import "owl.carousel/src/scss/owl.carousel";
  @import "owl.carousel/src/scss/owl.theme.default";
 
- @import "./colors.scss";
+ @import "./variables.scss";
  @import "./base.scss";
  @import "./navigation.scss";
  @import "./owl.scss"; 
