--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,15 +2,18 @@
   <nav class="shadow navbar navbar-expand-lg bg-light top-nav-menu">
     <div class="container">
       <a class="navbar-brand" href="/"><%= image_tag "woofmama-logo-lg.webp", class: "wm-nav-logo"%></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
+        <i class="fas fa-bars blue-text"></i>
+      </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav w-100 align-right">
           <a class="nav-item nav-link custom-navlink active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link custom-navlink" href="#">Features</a>
           <a class="nav-item nav-link custom-navlink" href="#">Pricing</a>
+          <button class="btn btn-green mr-sm-2" type="submit">Start Now</button>
+          <button class="btn btn-blue my-2 my-sm-0" type="submit">Log In</button>
         </div>
       </div>
-      <button class="btn btn-green mr-sm-2" type="submit">Start Now</button>
-      <button class="btn btn-blue my-2 my-sm-0" type="submit">Log In</button>
     </div>
   </nav>
 </header>
