added owner names and fixed card response

--- a/app/assets/stylesheets/owl.scss
+++ b/app/assets/stylesheets/owl.scss
@@ -11,9 +11,9 @@
     }
     .owl-item {
         width: auto;
-        margin-top: 15px;
-        margin-bottom: 15px;
+        margin: 15px !important;
         border-radius: 15px;
+        
     }
     .card-img-top {
         border-radius: 15px 15px 0px 0px;
