--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,13 +18,13 @@
             <div class="owl-carousel owl-theme owl-loaded circle-bckg">
                 <div class="owl-stage-outer">
                     <div class="owl-stage">
-                        <% @things.each do |thing| %>
+                        <% @testimonials.each do |testimonial| %>
                             <div class="card owl-item" style="width: 18rem;">
-                                <%= image_tag "#{thing[:imgsrc]}", class:"card-img-top",  alt: "Card image cap"%>
+                                <%= image_tag "#{testimonial[:imgsrc]}", class:"card-img-top",  alt: "Card image cap"%>
                                 <div class="card-body">
                                     <blockquote class="blockquote mb-0">
-                                         <p class="card-text"><%= thing[:test].html_safe %></p>
-                                        <footer class="blockquote-footer"><%= thing[:name] %> | <cite title="Source Title">Source Title</cite></footer>
+                                         <p class="card-text"><%= testimonial[:test].html_safe %></p>
+                                        <footer class="blockquote-footer"><%= testimonial[:name] %> | <cite title="Source Title"><%= testimonial[:title] %></cite></footer>
                                     </blockquote>
                                 </div>
                             </div>
