fixed alt text and fixed nav buttons

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,8 +10,8 @@
           <a class="nav-item nav-link custom-navlink active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link custom-navlink" href="#">Features</a>
           <a class="nav-item nav-link custom-navlink" href="#">Pricing</a>
-          <button class="btn btn-green mr-sm-2" type="submit">Start Now</button>
-          <button class="btn btn-blue my-2 my-sm-0" type="submit">Log In</button>
+          <button class="btn btn-green mr-sm-2 nav-buttons" type="submit">Start Now</button>
+          <button class="btn btn-blue my-2 my-sm-0 nav-buttons" type="submit">Log In</button>
         </div>
       </div>
     </div>
