--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -15,3 +15,14 @@
 .align-right {
     justify-content: flex-end;
 }
+
+.nav-buttons {
+    @media (max-width: #{$screen-lg-min}) {
+        width: 25%;
+        margin-top: 15px !important;
+    }
+    @media (max-width: #{$screen-md-min}) {
+        width: 75%;
+        margin-top: 15px !important;
+    }
+}
