--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WoofMama</title>
+    <title>WoofMama | The best DoggoCare App!</title>
+    <%= favicon_link_tag asset_path('himama-logo-small.webp') %>
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Doggo ipsum h*ck blep ur givin me a spook, thicc. Adorable doggo heckin angery woofer super chub snoot wow such tempt snoot long woofer, long doggo aqua doggo heck blop.">
+    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+    
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
